--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Hilda Enyioko</h1>
+            <div><a href="mailto:your.email@example.com">enyiokohilda@gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
+                    <li><a href="https://github.com/<handle>">@Hilda-Enyioko</a></li>
                     <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://twitter.com/<handle>">@hildahaemaxwell</a></li>
                 </ul>    
             </section>
             
@@ -31,7 +31,7 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Federal University Of Technology Owerri
                     </h2>
                     <h3>Major</h3>
                     <ul>
